--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "example-r2-multipart-upload",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.1.0",
-    "vitest": "1.3.0",
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.53.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.569.0"
+    "@aws-sdk/client-s3": "^3.569.0",
+    "aws-sdk": "^2.1615.0"
   }
 }
