--- a/wrangler-example.toml
+++ b/wrangler-example.toml
@@ -1,18 +1,13 @@
-name = "your-project-nname"
+# must me the same as the folder name of the project
+name = "example-r2-multipart-upload"
 main = "src/index.js"
-compatibility_date = "2024-05-05"
-account_id = "your-account-id"
-workers_dev = true
+# use current date 
+compatibility_date = "2024-05-07" 
+compatibility_flags = ["nodejs_compat"]
 
-[[r2_buckets]]
-binding = "YOUR-BUCKET-NAME"
-bucket_name = "your-bucket-name"
 
 [vars]
-CF_R2_ACCOUNT_ID="your-r2-account-id"
-CF_TOKEN_VALUE="your-cloudflare-token"
-CF_R2_ACCESS_KEY_ID="your-r2-access-key-id"
-CF_R2_SECRET_ACCESS_KEY="your-r2-secret-access-key"
-CF_ENDPOINT="your-cloudflare-endpoint-url"
-
-
+R2_ACCESS_KEY_ID = "<your access key id>"
+R2_SECRET_ACCESS_KEY = "<your secret access key>"
+# uner "jurisdiction-specific endpoints for S3 clients" when creating the api key
+CF_ENDPOINT = "<your endpoint url>"
